--- a/template/draft_detail.html
+++ b/template/draft_detail.html
@@ -3,21 +3,21 @@
 {% block content %}
 <div class="post">
     
-    {% if post.created_date %} 
-    <div class="date"></div>
+    {% if draft.created_date %} 
+    <div class="date">{{draft.created_date}}</div>
         {% else %}
-        <a href="" class="btn btn-default">Pubish</a>
+        <a href="/post-published/{{post.pk}}" class="btn btn-default">Publish</a>
     {% endif %}
     <h1>
         {{post.title}}
     </h1>
        
         {% if user.is_authenticated %}
-            <a href="" class="btn btn-default"><span class="material-icons">
+            <a href="/post-edit/{{post.pk}}" class="btn btn-default"><span class="material-icons">
                 edit
             </span>
             </a>
-            <a href="" class="btn btn-default"><span class="material-icons">
+            <a href="/post-delete/{{post.pk}}" class="btn btn-default"><span class="material-icons">
                 delete
             </span>
         </a>
