--- a/template/post_detail.html
+++ b/template/post_detail.html
@@ -2,19 +2,20 @@
 
 {% block content %}
 <div class="post">
-    {% if post.published_date %} <div class="date">{{post.published}}</div>
+    {% if post.published_date %}
+     <div class="date">{{post.published_date}}</div>
         {% else %}
-        <a href="" class="btn btn-default">Pubish</a>
+        <a href="/post-published/{{post.pk}}" class="btn btn-default">Publish</a>
    {% endif %}
         <h1>
             {{post.title}}             
         </h1>
         {% if user.is_authenticated %}
-            <a href="" class="btn btn-default"><span class="material-icons">
+            <a href="/post-edit/{{post.pk}}" class="btn btn-default"><span class="material-icons">
                 edit
             </span>
             </a>
-            <a href="" class="btn btn-default"><span class="material-icons">
+            <a href="/post-delete/{{post.pk}}" class="btn btn-default"><span class="material-icons">
                 delete
             </span>
         </a>
