--- a/template/post_list.html
+++ b/template/post_list.html
@@ -4,13 +4,18 @@
 
 {% for post in posts %} 
 <div class="post">
-{% if post.published_date %} <div class="date">
-    {{ post.published_date }}
+  {% if post.published_date %} 
+  <div class="date">
+  Published: {{ post.published_date }}
 </div>
 {% endif%}
-<h1><a href="/post-detail/{{post.pk}}">{{post.title}}</a></h1>
-  <p>{{post.published_date}}</p>
-  <p>{{post.text | truncatechars:150 }}</p>
+<h1>
+  <a href="/post-detail/{{post.pk}}">
+    {{post.title}}
+  </a>
+</h1>
+  <!-- <p>{{post.published_date}}</p> -->
+  <p>{{ post.text | truncatechars:150 }}</p>
 </div>
 
 
