--- a/template/base.html
+++ b/template/base.html
@@ -20,7 +20,7 @@
              
            {% if user.is_authenticated %}
             <p class="top-menu" style="font-family: Arial, Helvetica, sans-serif; font-size: 35px;">Hello {{user.username}} &nbsp; 
-              <a href="/" class="top-menu">
+              <a href="{% url 'logout' %}" class="top-menu">
                 <span class="material-icons md-48" style="font-size: 25px;">
                   logout
                   </span>
